--- a/rspGame/rsp.html
+++ b/rspGame/rsp.html
@@ -5,8 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>가위바위보 게임</title>
+    <link rel="stylesheet" href="/rspGame/style.css">
 </head>
 <body>
-    
+    <header>
+        <h1>가위바위보 GAME</h1>
+    </header>
+    <main>
+        <!-- 가위바위보 선택 버튼 -->
+        <div class="btn">
+            
+        </div>
+        <!-- 결과-> 컴퓨터: ? vs 본인: ? -->
+        <div class="result">
+
+        </div>
+    </main>
+
+
+    <script src="/rspGame/app.js"></script>
 </body>
 </html>
