--- a/rspGame/rsp.html
+++ b/rspGame/rsp.html
@@ -14,11 +14,17 @@
     <main>
         <!-- 가위바위보 선택 버튼 -->
         <div class="btn">
-            
+            <button type="button" id="btn1">가위</button>
+            <button type="button" id="btn2">바위</button>
+            <button type="button" id="btn3">보</button>
         </div>
-        <!-- 결과-> 컴퓨터: ? vs 본인: ? -->
+        <!-- 결과: 컴퓨터 vs 본인-->
         <div class="result">
-
+            <p>COMPUTER: </p>
+            <h4>
+                <!--결과발표-->
+                무승부
+            </h4>
         </div>
     </main>
 
