--- a/rspGame/rsp.html
+++ b/rspGame/rsp.html
@@ -20,7 +20,11 @@
         </div>
         <!-- 결과: 컴퓨터 vs 본인-->
         <div class="result">
-            <p>COMPUTER: </p>
+            <div class="info">
+                <p>COMPUTER: </p><p><!--가위바위보 중 선택--></p>
+                <span>vs</span>
+                <p>ME: </p><p><!--가위바위보 중 선택한 것 표시--></p>
+            </div>
             <h4>
                 <!--결과발표-->
                 무승부
