--- a/rspGame/rsp.html
+++ b/rspGame/rsp.html
@@ -21,9 +21,9 @@
         <!-- 결과: 컴퓨터 vs 본인-->
         <div class="result">
             <div class="info">
-                <p>COMPUTER: </p><p><!--가위바위보 중 선택--></p>
+                <p>COMPUTER: </p><p id="computer"><!--가위바위보 중 선택--></p>
                 <span>vs</span>
-                <p>ME: </p><p><!--가위바위보 중 선택한 것 표시--></p>
+                <p>ME: </p><p id="mine"><!--가위바위보 중 선택한 것 표시--></p>
             </div>
             <h4>
                 <!--결과발표-->
