--- a/rspGame/rsp.html
+++ b/rspGame/rsp.html
@@ -14,9 +14,20 @@
     <main>
         <!-- 가위바위보 선택 버튼 -->
         <div class="btn">
-            <button type="button" id="btn1">가위</button>
-            <button type="button" id="btn2">바위</button>
-            <button type="button" id="btn3">보</button>
+            <button type="button" id="btn1">
+                <img src="./img/scissor.png" alt="" id="img-scissor">
+                <!-- <a href="https://www.flaticon.com/kr/free-icons/" title="가위 아이콘">가위 아이콘  제작자: Freepik - Flaticon</a> -->
+            </button>
+            <button type="button" id="btn2">
+                <img src="./img/rock.png" alt="" id="img-rock">
+                <!--<a href="https://www.flaticon.com/kr/free-icons/" title="주먹 아이콘">주먹 아이콘  제작자: Freepik - Flaticon</a>-->
+            </button>
+            <button type="button" id="btn3">
+                <img src="./img/hand.png" alt="" id="img-paper">
+                <!--<a href="https://www.flaticon.com/kr/free-icons/" title="손 아이콘">손 아이콘  제작자: Freepik - Flaticon</a>-->
+            </button>
+            <!-- <button type="button" id="btn2">바위</button>
+            <button type="button" id="btn3">보</button> -->
         </div>
         <!-- 결과: 컴퓨터 vs 본인-->
         <div class="result">
@@ -30,7 +41,6 @@
                 무승부
             </h4>
         </div>
-        변경
     </main>
 
 
