--- a/rspGame/rsp.html
+++ b/rspGame/rsp.html
@@ -14,20 +14,21 @@
     <main>
         <!-- 가위바위보 선택 버튼 -->
         <div class="btn">
-            <button type="button" id="btn1">
-                <img src="./img/scissor.png" alt="" id="img-scissor">
+            <!--가위-->
+            <button type="button" id="btn1" value="가위">
+                <img src="./img/scissor.png" alt="" class="img-scissor" id="가위">
                 <!-- <a href="https://www.flaticon.com/kr/free-icons/" title="가위 아이콘">가위 아이콘  제작자: Freepik - Flaticon</a> -->
             </button>
-            <button type="button" id="btn2">
-                <img src="./img/rock.png" alt="" id="img-rock">
+            <!--바위-->
+            <button type="button" id="btn2" value="바위">
+                <img src="./img/rock.png" alt="" class="img-rock" id="바위">
                 <!--<a href="https://www.flaticon.com/kr/free-icons/" title="주먹 아이콘">주먹 아이콘  제작자: Freepik - Flaticon</a>-->
             </button>
-            <button type="button" id="btn3">
-                <img src="./img/hand.png" alt="" id="img-paper">
+            <!--보-->
+            <button type="button" id="btn3" value="보">
+                <img src="./img/hand.png" alt="" class="img-paper" id="보">
                 <!--<a href="https://www.flaticon.com/kr/free-icons/" title="손 아이콘">손 아이콘  제작자: Freepik - Flaticon</a>-->
             </button>
-            <!-- <button type="button" id="btn2">바위</button>
-            <button type="button" id="btn3">보</button> -->
         </div>
         <!-- 결과: 컴퓨터 vs 본인-->
         <div class="result">
