--- a/rspGame/rsp.html
+++ b/rspGame/rsp.html
@@ -33,11 +33,11 @@
         <!-- 결과: 컴퓨터 vs 본인-->
         <div class="result">
             <div class="info">
-                <p>COMPUTER: </p><p id="computer"><!--가위바위보 중 선택--></p>
+                <p>COMPUTER: <span class="computerChoice"><!--가위바위보 중 선택--></span></p>
                 <span>vs</span>
-                <p>ME: </p><p id="mine"><!--가위바위보 중 선택한 것 표시--></p>
+                <p>ME: <span class="myChoice"><!--가위바위보 중 선택한 것 표시--></span></p>
             </div>
-            <h4>
+            <h4 class="winner">
                 <!--결과발표-->
                 무승부
             </h4>
