무승부 결과

--- a/rspGame/rsp.html
+++ b/rspGame/rsp.html
@@ -33,13 +33,13 @@
         <!-- 결과: 컴퓨터 vs 본인-->
         <div class="result">
             <div class="info">
-                <p>COMPUTER: <span class="computerChoice"><!--가위바위보 중 선택--></span></p>
+                <p>COMPUTER: <p class="computerChoice"><!--가위바위보 중 선택--></p></p>
                 <span>vs</span>
-                <p>ME: <span class="myChoice"><!--가위바위보 중 선택한 것 표시--></span></p>
+                <p>ME: <p class="myChoice"><!--가위바위보 중 선택한 것 표시--></p></p>
             </div>
             <h4 class="winner">
                 <!--결과발표-->
-                무승부
+                
             </h4>
         </div>
     </main>
