html, css 아이콘 수정

--- a/rspGame/rsp.html
+++ b/rspGame/rsp.html
@@ -17,17 +17,17 @@
             <!--가위-->
             <button type="button" id="btn1" value="가위">
                 <img src="./img/scissor.png" alt="" class="img-scissor" id="가위">
-                <!-- <a href="https://www.flaticon.com/kr/free-icons/" title="가위 아이콘">가위 아이콘  제작자: Freepik - Flaticon</a> -->
+                <!--<a href="https://www.flaticon.com/free-icons/victory" title="victory icons">Victory icons created by Vitaly Gorbachev - Flaticon</a>-->
             </button>
             <!--바위-->
             <button type="button" id="btn2" value="바위">
                 <img src="./img/rock.png" alt="" class="img-rock" id="바위">
-                <!--<a href="https://www.flaticon.com/kr/free-icons/" title="주먹 아이콘">주먹 아이콘  제작자: Freepik - Flaticon</a>-->
+                <!--<a href="https://www.flaticon.com/free-icons/sign-language" title="sign language icons">Sign language icons created by Vitaly Gorbachev - Flaticon</a>-->
             </button>
             <!--보-->
             <button type="button" id="btn3" value="보">
-                <img src="./img/hand.png" alt="" class="img-paper" id="보">
-                <!--<a href="https://www.flaticon.com/kr/free-icons/" title="손 아이콘">손 아이콘  제작자: Freepik - Flaticon</a>-->
+                <img src="./img/paper.png" alt="" class="img-paper" id="보">
+                <!--<a href="https://www.flaticon.com/free-icons/hand" title="hand icons">Hand icons created by Vitaly Gorbachev - Flaticon</a>-->
             </button>
         </div>
         <!-- 결과: 컴퓨터 vs 본인-->
