결과발표 css 수정

--- a/rspGame/rsp.html
+++ b/rspGame/rsp.html
@@ -12,6 +12,7 @@
         <h1>가위바위보 GAME</h1>
     </header>
     <main>
+        <p style="margin: 20px; color: gray;">아래 아이콘 중 하나를 선택하세요!</p>
         <!-- 가위바위보 선택 버튼 -->
         <div class="btn">
             <!--가위-->
@@ -37,9 +38,9 @@
                 <span>vs</span>
                 <p>ME: <p class="myChoice"><!--가위바위보 중 선택한 것 표시--></p></p>
             </div>
-            <h4 class="winner">
+            <h3 class="winner">
                 <!--결과발표-->
-            </h4>
+            </h3>
         </div>
     </main>
 
